meego-keyboard (0.6.5~2) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#253459 - Arabic email and URL layouts need symbol changes.

 -- Csaba Kertesz <csaba.kertesz@vincit.fi>  Wed, 18 May 2011 10:53:10 +0200

meego-keyboard (0.6.5-1) unstable; urgency=low

  * Fixes: NB#248730
  * Fixes: NB#254995 - Word tracker font barely readably
  * Fixes: Accented character is getting inputted into the text field when tapped on any of the keys that lies below the accented character list.
  * Fixes: NB#256057 - Multitouch behaviour is broken in main and symbol views
  * Fixes: Stuck backspace when extended keys pop up
  * Fixes: NB#226861 - VKB layout is changing to lower-case when switched between main view and sym view.
  * Fixes: latched shift when extended key area is shown
  * Fixes: inconsistency between shift key state and level of other keys

 -- Hannu Koivisto <hannu.koivisto@vincit.fi>  Wed, 18 May 2011 10:21:00 +0200

meego-keyboard (0.6.4-1) unstable; urgency=low

  * Fixes: NB#245999 - backspace gets stuck after certain gesture in VKB

 -- Jan Arne Petersen <jpetersen@openismus.com>  Tue, 17 May 2011 11:23:00 +0200

meego-keyboard (0.6.3-1) unstable; urgency=low

  * Fixes: NB#251341 - Switching to plugin does not happen if there is one language set in MeegoKeyboard.
  * Fixes: NB#250363 - A selection for available Input methods needed in Text input Setting

 -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Thu, 12 May 2011 10:23:02 +0300

meego-keyboard (0.6.2-1) unstable; urgency=low

  * Fixes: NB#252067 - VKB 'attribute extended' highlighted enabled key seems to have a broken style
  * Fixes: NB#250812 - URL sharing within Browser to Facebook - keyboard has !!Go key instead of carriage return
  * Fixes: NB#252091 - word tracker "tail" is obsolete and should be removed
  * Fixes: NB#253747 - Switch the location of Ä and Ö in finnish VKB
  * Fixes: NB#252284 - Memory corruption in libmeegoreactionmap?